--- a/requirements.txt
+++ b/requirements.txt
@@ -11,9 +11,10 @@ dataclasses==0.6
 Django==3.1.3
 django-cors-headers==3.5.0
 django-elasticsearch-dsl==7.1.4
+django-filter==2.4.0
 django-silk==4.1.0
 djangorestframework==3.12.2
--e git+git@github.com:mathislucka/dualtext.git@33541bb4bf644c51a0dff74d007c359532d783eb#egg=DualtextCli&subdirectory=dualtext_client
+-e git+git@github.com:mathislucka/dualtext.git@90a8ccc00615742fc1318368ff6d8b9b61bd5b4b#egg=DualtextCli&subdirectory=dualtext_client
 elasticsearch==7.10.0
 elasticsearch-dsl==7.3.0
 factory-boy==3.2.0
