--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,22 +8,22 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "autoprefixer": "^9.8.6",
-    "core-js": "^3.6.5",
-    "d3": "^6.3.1",
-    "postcss": "^7.0.35",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1",
-    "uuid": "^8.3.1",
-    "vue": "^3.0.0",
-    "vue-router": "^4.0.0-rc.5"
+    "autoprefixer": "^10.4.2",
+    "core-js": "^3.20.2",
+    "d3": "*",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.13",
+    "uuid": "*",
+    "vue": "^3.0",
+    "vue-router": "^4.0.12"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0-0"
+    "@babel/eslint-parser": "^7.16.5",
+    "@vue/cli-plugin-eslint": "^5.0.0-rc.1",
+    "@vue/cli-service": "^5.0.0-rc.1",
+    "@vue/compiler-sfc": "^3.2.26",
+    "eslint": "^8.6.0",
+    "eslint-plugin-vue": "^7.0.0-beta.4",
+    "webpack": "^5.0.0-rc.6"
   }
 }
