--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -1,13 +1,7 @@
 module.exports = {
   root: true,
   env: {
-    node: true
-  },
-  'extends': [
-    'plugin:vue/vue3-essential'
-  ],
-  parserOptions: {
-    parser: 'babel-eslint'
+    es2021: true
   },
   rules: {
     'no-console': process.env.NODE_ENV === 'production' ? 'warn' : 'off',
