--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,27 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview"
   },
   "dependencies": {
     "autoprefixer": "^10.4.2",
-    "core-js": "^3.20.2",
     "d3": "*",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.13",
     "uuid": "*",
+    "vite": "^2.7.13",
     "vue": "^3.0",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.16.5",
-    "@vue/cli-plugin-eslint": "^5.0.0-rc.1",
-    "@vue/cli-service": "^5.0.0-rc.1",
-    "@vue/compiler-sfc": "^3.2.26",
+    "@vitejs/plugin-vue": "^2.0.1",
     "eslint": "^8.6.0",
-    "eslint-plugin-vue": "^7.0.0-beta.4",
-    "webpack": "^5.0.0-rc.6"
+    "eslint-plugin-vue": "^8.3.0"
   }
 }
