WIP remove search for now
- haystack installation does not run smoothly

--- a/dualtext_server/dualtext_api/haystack_connector/pipeline_config.yml
+++ b/dualtext_server/dualtext_api/haystack_connector/pipeline_config.yml
@@ -1,10 +1,15 @@
-elastic_index:
-  type: indexing
-  url:
-  token:
-
-elastic_query:
-  type: query
-  url:
-  token:
-
+#elastic_index:
+#  type: indexing
+#  url:
+#  token:
+#
+#elastic_query:
+#  type: query
+#  url:
+#  token:
+#
+#alternative_query:
+#  type: query
+#  url:
+#  token:
+#
