--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,7 +6,8 @@ server {
     listen 80;
 
     location / {
-        alias /home/dualtext/web/spa/;
+	root /home/dualtext/web/spa;
+        try_files $uri /index.html =404;
     }
 
     location /admin/ {
