--- a/.env.prod.example
+++ b/.env.prod.example
@@ -3,3 +3,5 @@ DJANGO_SECRET_KEY=changeyoursecretinproduction
 DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 0.0.0.0 [::1]
 DJANGO_CORS_ORIGIN_WHITELIST=localhost:1337
 DJANGO_CSRF_TRUSTED_ORIGINS=localhost:1337
+SQL_ENGINE=django.db.backends.mysql
+
