update example env

--- a/dualtext_server/.env.prod.example
+++ b/dualtext_server/.env.prod.example
@@ -1,7 +1,12 @@
 DJANGO_DEBUG=0
 DJANGO_SECRET_KEY=changeyoursecretinproduction
 DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 0.0.0.0 [::1]
-DJANGO_CORS_ORIGIN_WHITELIST=localhost:1337
-DJANGO_CSRF_TRUSTED_ORIGINS=localhost:1337
+DJANGO_CORS_ORIGIN_WHITELIST=http://localhost:1337
+DJANGO_CSRF_TRUSTED_ORIGINS=http://localhost:1337
 SQL_ENGINE=django.db.backends.mysql
+SQL_HOST=db-host
+SQL_PORT=dp-port
+SQL_DATABASE=db-name
+SQL_USER=db-user
+SQL_PASSWORD=db-password
 
