--- a/dualtext_server/nginx/nginx.conf
+++ b/dualtext_server/nginx/nginx.conf
@@ -29,3 +29,79 @@ server {
     }
 
 }
+
+
+#######################
+### config with SSL ###
+#######################
+
+# server {
+# 	listen 80 default_server;
+# 	return 444;
+# }
+# server {
+# 	listen 80;
+# 	listen [::]:80;
+# 	server_name your_domain.com;
+# 	return 301 https://$server_name$request_uri;
+# }
+#
+# server {
+# 	listen 443 ssl http2;
+# 	listen [::]:443 ssl http2;
+# 	server_name your_domain.com;
+#
+# 	# SSL
+# 	ssl_certificate /etc/letsencrypt/live/your_domain.com/fullchain.pem;
+# 	ssl_certificate_key /etc/letsencrypt/live/your_domain.com/privkey.pem;
+#
+# 	ssl_session_cache shared:le_nginx_SSL:10m;
+# 	ssl_session_timeout 1440m;
+# 	ssl_session_tickets off;
+#
+# 	ssl_protocols TLSv1.2 TLSv1.3;
+# 	ssl_prefer_server_ciphers off;
+#
+# 	ssl_ciphers "ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384";
+#
+# 	client_max_body_size 4G;
+# 	keepalive_timeout 5;
+#
+#     # route requests to /admin to the django admin pages
+#     location /admin/ {
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+#         proxy_set_header Host $http_host;
+#         proxy_redirect off;
+#         proxy_redirect off;
+#         proxy_pass http://dualtext;
+#     }
+#
+#     # route requests to /api/v1 to the dualtext api
+#     location /api/v1/ {
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+#         proxy_set_header Host $http_host;
+#         proxy_redirect off;
+#         proxy_redirect off;
+#         proxy_pass http://dualtext;
+#     }
+#
+#     # staticfiles for django admin pages
+#     location /static/ {
+#         alias /home/dualtext/web/staticfiles/;
+#     }
+#
+#
+#     # route all other requests to SPA frontend (Vue router takes care of the rest)
+#     location / {
+# 	    root /home/dualtext/web/spa;
+#         try_files $uri /index.html =404;
+#     }
+#
+#     # in case of using letsencrypt
+# 	  location ^~ /.well-known/acme-challenge/ {
+# 		root /var/www/html;
+# 	  }
+#
+# }
