--- a/dualtext_server/nginx/nginx.conf
+++ b/dualtext_server/nginx/nginx.conf
@@ -6,7 +6,7 @@ server {
     listen 80;
 
     location / {
-	root /home/dualtext/web/spa;
+	    root /home/dualtext/web/spa;
         try_files $uri /index.html =404;
     }
 
@@ -22,6 +22,15 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
+    }
+
+    # increase the maximum body size for document batch uploads
+    location ~ /api/v1/corpus/[0-9]+/document/batch/ {
+        proxy_pass http://dualtext;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+        client_max_body_size 10m;
     }
 
     location /static/ {
