--- a/dualtext_server/nginx/nginx.conf
+++ b/dualtext_server/nginx/nginx.conf
@@ -1,3 +1,33 @@
+# gzip settings
+gzip on;
+
+gzip_vary on;
+gzip_proxied any;
+gzip_comp_level 6;
+gzip_buffers 16 8k;
+gzip_http_version 1.1;
+gzip_min_length 256;
+gzip_types
+  application/atom+xml
+  application/geo+json
+  application/javascript
+  application/x-javascript
+  application/json
+  application/ld+json
+  application/manifest+json
+  application/rdf+xml
+  application/rss+xml
+  application/xhtml+xml
+  application/xml
+  font/eot
+  font/otf
+  font/ttf
+  image/svg+xml
+  text/css
+  text/javascript
+  text/plain
+  text/xml;
+
 upstream dualtext {
     server web:8000;
 }
@@ -9,6 +39,12 @@ server {
 	    root /home/dualtext/web/spa;
         try_files $uri /index.html =404;
     }
+
+    location /assets/ {
+		expires 365d;
+		add_header Cache-Control "public, max-age=31536000";
+	    root /home/dualtext/web/spa;
+	}
 
     location /admin/ {
         proxy_pass http://dualtext;
